replace trim/isEmpty with isBlank